# edge-cam-train

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  README.md  environment.yml  pyproject.toml  检测数据集_分析报告.html
.claude/hooks/: block-dangerous-git.sh
configs/ablation/: classify_grid.yaml
configs/channels/: candidate.yaml  stable.yaml
configs/data/: birds525.yaml  classify_europe.yaml  classify_feeder.yaml  detect_feeder5.yaml  detect_round1.yaml  detect_round2.yaml  detect_round3.yaml  detection_feeder.yaml
configs/eval/: envelope.yaml
configs/eval/gates/: second_gate.yaml
configs/train/classify/: config.yaml
data/processed/birds525/: ebird_aliases.csv  ebird_map.csv
data/region/europe/: europe_coverage_summary.json  europe_image_coverage.jsonl  europe_manifest_summary.json  europe_species.jsonl  europe_summary.json
data/taxonomy/ebird_clements_2025/: README.md  _meta.json  rollup.jsonl  species.jsonl
deploy/v861_awnn_batch/: AWNN_batch.c  README.md  run_board.sh
deploy/v861_firmware_base/: .gitignore  README.md
deploy/v861_ppyoloe_run/: README.md  build.sh  ppyoloe_run.c
docs/: engineering.md  gpu-rental-prep.md  plan-v2.md  方法论-检测复盘.md
docs/classify/: 00-螺旋harness起始.md  01-数据集.md  02-训练与评估.md  03-实操日志.md  04-V861选型调研.md  05-系统架构最佳实践.md  06-螺旋harness-v0.md  07-竞品与端侧差异化.md  08-数据源审查.md  09-欧洲数据集报告-v1.md  README.md
docs/decisions/: ADR-0001-feasibility-first-classification.md  ADR-0002-ebird-taxonomy-seam.md  ADR-0003-model-family-backend-seams.md  ADR-0004-detection-coarse-taxonomy-5class.md  ADR-0005-classification-data-licensing-and-teacher.md  ADR-0006-detection-data-acquisition-standardization.md  ADR-0007-detection-onnx-logits-sigmoid-on-cpu.md  ADR-0008-classification-model-architecture.md  ADR-0009-v861-awnn-toolchain-deployment-path.md
docs/detect/: 01-数据集.md  02-训练与评估.md  03-实操日志.md  03-数据获取实操.md  04-V861-AWNN部署转换.md  05-V861-真板部署.md  README.md  round2-数据计划.md  伪标注-labelstudio.md  数据管线.md  检测实验计划.md
docs/开发笔记/: clean_md.py  insert_media.sh  make_cards.py  reinsert.sh  开发笔记.md  开发笔记_clean.md
docs/开发笔记/diagrams/: data_unify.dot  data_unify.mmd  pipeline.dot  pipeline.mmd  product_chain.dot  product_chain.mmd
regions/: us.json  us_ca.json
results/cascade_eval_20260620/scripts/: cascade_prep.py  padding_sweep.py
results/classify/: build_html.py  build_months.py  build_regions.py  cascade_demo.py  crop_dataset.py  envelope_v1_vs_v2.csv  make_classify_report_assets.py  regional_eval.py  分类实验报告.html  分类实验报告.md
results/classify/cascade_v2/: cascade_examples.json
results/classify/regional/: ebird_map.csv  month_results.json  regional_results.json
results/classify/v1_fullimage/: metrics_v1.csv  metrics_v2.csv
results/classify/v2_crop/: crop_summary.json  metrics_cropv2.csv
results/detect/: build_html.py  检测实验报告.html  检测实验报告.md
results/detect/feeder_320/: README.md  eval_results.txt  metrics_scalars.json  overall_metrics.csv  per_class_ap.csv  train_cfg.yml  train_loss_curve.csv  val_metrics_curve.csv
results/detect/feeder_416/: README.md  eval_results.txt  make_report_assets.py  overall_metrics.csv  per_class_ap.csv  train_cfg.yml  train_loss_curve.csv
results/detect/mobile_handoff_nanodet/: README.md  nanodet_detect.py
results/detect/mobile_handoff_nanodet/round2/ncnn/: CMakeLists.txt  feeder_detect_ref.py  nanodet_feeder5_mobile_416.param
results/detect/mobile_handoff_ppyoloe/: README.md  labels.txt  ppyoloe_detect.py
results/detect/round1/: bakeoff_results.json  feeder_cameo_recall.json  md_zeroshot_recall.json  (+1 more)
results/detect/round2/mobile_handoff/: AGENTS.md  CMakeLists.txt  README.md  feeder_detect_ref.py  feeder_detect_tflite.py  feeder_detector.cpp  feeder_detector.h
results/detect/round2/mobile_handoff/ncnn/: demo_main.cpp
results/detect/round2/mobile_handoff/tflite/: feeder_detect_tflite.py
results/gpu_run_20260620_ablation_detect/: SUMMARY.md  ablation.md  detect_eval_results.txt
results/实验1/: 实验报告.html  实验报告.md
scripts/: audit_europe_image_coverage.py  build_ebird_mapping.py  build_europe_download_manifest.py  build_europe_species_list.py  build_region_list.py  crop_manifest_images.py  download_manifest_images.py  fetch_gbif_birds.py  fetch_oiv7_direct.py  gbif_download_to_manifest.py  setup_nanodet.sh
src/edge_cam/: onnx_artifact.py
tests/: conftest.py  test_hierarchical_usability.py  test_smoke.py
tests/cascade/: test_adapters.py  test_pipeline.py
tests/contracts/: test_channel.py  test_dataset.py  test_detection.py  test_detection_manifest.py  test_model_card.py
tests/core/: test_core.py
tests/data/: test_calib.py  test_caltech_ct_rescale.py  test_classify_adapter_base.py  test_classify_build.py  test_classify_gbif_adapter.py  test_coco_json_adapter.py  test_crop.py  test_data_gate.py  test_detect_acquire_cli.py  test_detect_adapter_base.py  test_detect_build.py  test_detect_datasets.py  test_detection_classes.py  test_detection_ingest_manifest.py  test_ebird_mapping.py  test_ebird_registry.py  test_feeder_crop.py  test_inat_md.py  test_ingest.py  test_ingest_registry.py  test_merge_map.py  test_oiv7_adapter.py  test_prep.py  test_roboflow_feeder.py  test_scaling.py  test_split.py  test_squirrelgarden_adapter.py  test_taxonomy.py
tests/deploy/: test_awnn_packager.py  test_board_stubs.py  test_manifest_api.py
tests/eval/: test_ablation.py  test_analyze.py  test_cascade_envelope.py  test_detect_confusion.py  test_detect_margin.py  test_detect_metrics.py  test_detect_report.py  test_envelope.py  test_full_eval.py  test_gate.py  test_ls_review.py  test_md_difficulty.py  test_megadetector.py  test_metrics.py  test_quantizers.py  test_regional.py  test_report.py  test_run_detect_envelope.py  test_run_envelope.py  test_zeroshot_eval.py
tests/registry/: test_promotion.py  test_store.py
tests/train/: test_augment.py  test_backends.py  test_classify_callbacks.py  test_data.py  test_detect_preprocess_single_source.py  test_export.py  test_module.py  test_nanodet_config.py  test_onnx_postproc.py  test_run_detect.py  test_swanlab_nanodet.py  test_train_smoke.py
(+241 files in other folders)
