[project]
name = "edge-cam-train"
version = "0.0.0"
description = "边侧 AI 相机训练→消融→量化→部署框架 (Allwinner V85x, Vivante VIP NPU, INT8-only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

# W0 scaffold：仅声明编排薄层依赖；重型训练/数据依赖（torch/timm/lightning/
# fiftyone/onnx 等）随各阶段按需加入 optional-dependencies，避免一上来就拉满。
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "structlog>=24",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12",
    "pytest>=8",
    "pre-commit>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_cam"]

# ----------------------------------------------------------------------------
# ruff: lint + format（提交前必跑：ruff check src tests && ruff format src tests）
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, UP=pyupgrade, B=bugbear, SIM=simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["edge_cam"]

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
# 让 pytest 不依赖 editable install 也能 import edge_cam（W0 便利；装包后仍兼容）
pythonpath = ["src"]

# ----------------------------------------------------------------------------
# pyright/pylance: src layout，让编辑器解析 edge_cam 包
# ----------------------------------------------------------------------------
[tool.pyright]
extraPaths = ["src"]
include = ["src", "tests"]
