[project]
name = "edge-cam-train"
version = "0.0.0"
description = "边侧 AI 相机（智能观鸟器）鸟类识别训练→评测→量化→部署框架 (Allwinner V861, Vivante VIP NPU 1 TOPS INT8-only)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "PolyForm-Noncommercial-1.0.0" }

# 核心：数据准备 + 契约（轻量，无 torch）。重型 ML 栈在 [train] extra。
dependencies = [
    "pydantic>=2",
    "pyyaml>=6",
    "structlog>=24",
    "pillow>=10",
    "numpy>=1.26",
]

[project.optional-dependencies]
# 训练/评估/导出栈。GPU 机（AutoDL）须按 CUDA 版本单独装 torch（见 README），
# 其余随本 extra 装。onnxsim 可选（缺则 export 跳过简化），未列入以免跨平台编译失败。
train = [
    "torch>=2.2",
    "torchvision>=0.17",
    "timm>=1.0",
    "lightning>=2.2",
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    "onnx>=1.16",
    "onnxruntime>=1.17",
]
# 实验追踪 + 数据版本（engineering §6）：aim 跟踪训练/消融指标、dvc 版本化数据/校准集/.nb。
track = [
    "aim>=3.17",
    "setuptools<81",  # aim 依赖 pkg_resources；setuptools>=81 移除了它（GPU 实跑踩到）
    "dvc>=3.0",
]
# 数据准备（离线 dev 机）：FiftyOne 拉 COCO/OIV7 + 可视化/导出。mongodb 由 fiftyone 自带。
data = [
    "fiftyone>=1.0",
    "pycocotools>=2.0",
]
# OTA manifest API（FastAPI）+ registry 服务端
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
]
dev = [
    "ruff>=0.12",
    "pytest>=8",
    "pre-commit>=3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/edge_cam"]

# ----------------------------------------------------------------------------
# ruff: lint + format（提交前必跑：ruff check src tests && ruff format src tests）
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]
# results/ = GPU 实跑记录与一次性驱动脚本（provenance），非维护源码 → 不 lint
extend-exclude = ["results"]

[tool.ruff.lint]
# E/F=pyflakes+pycodestyle, I=isort, UP=pyupgrade, B=bugbear, SIM=simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["edge_cam"]

# ----------------------------------------------------------------------------
# pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# 默认跳过 slow（torch 训练/导出 end-to-end）→ pre-commit 快；CI / 手动用 `-m slow` 或 `-m ''` 跑全量
addopts = "-ra -m 'not slow'"
markers = [
    "slow: 重型 torch 端到端（训练/ONNX 导出）；默认与 pre-commit 跳过，CI/手动全量跑",
]
# 让 pytest 不依赖 editable install 也能 import edge_cam（W0 便利；装包后仍兼容）
# "." 让测试可 import scripts/ 下的离线工具脚本（build_ebird_mapping 等）
pythonpath = ["src", "."]

# ----------------------------------------------------------------------------
# pyright/pylance: src layout，让编辑器解析 edge_cam 包
# ----------------------------------------------------------------------------
[tool.pyright]
extraPaths = ["src"]
include = ["src", "tests"]
# torch 等运行时库的 stub 把公共 API 标为「未导出」→ 关掉这条噪声
reportPrivateImportUsage = "none"
